syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

option go_package = "../proto";

service GuestbookService {
    // 新增
    //rpc CreateGuestbook (CreateGuestbookRequest) returns (CreateGuestbookResponse);
    // 查詢全部
    rpc GetGuestbook (GetGuestbookRequest) returns (GetGuestbookResponse);
    // 修改
    //rpc UpdateGuestbook (UpdateGuestbookRequest) returns (UpdateGuestbookResponse);
    // 刪除
    //rpc DeleteGuestbook (DeleteGuestbookRequest) returns (DeleteGuestbookResponse);
  
    //rpc SCreateGuestbooks (stream CreateGuestbookRequest) returns (stream CreateGuestbookResponse);
  }
  
  message CreateGuestbookRequest {
    string name = 1;
    string title = 2;
    string content = 3;
    bool status = 4;
    google.protobuf.Timestamp endtime = 5;
  }
  
  message CreateGuestbookResponse {
    string message = 1;
    int64 status = 2;
    google.protobuf.Timestamp createAt = 3;
  }
  
  message GetGuestbookRequest {
      string query = 1;
  }
  
  message GetGuestbookResponse {
      string message = 1;
      int64 status = 2;
      repeated Guestbook guestbooks = 3;
  }
  
  message Guestbook{
    string id = 1;
    string name = 2;
    string title = 3;
    string content = 4;
    bool status = 5;
  }
  
  message UpdateGuestbookRequest {
      string id = 1;
      string name = 2;
      string title = 3;
      string content = 4;
      bool status = 5;
      google.protobuf.Timestamp endtime = 6;
  }
  
  message UpdateGuestbookResponse {
      string id = 1;
      string message = 2;
      int64 status = 3;
  }
  
  message DeleteGuestbookRequest {
      string id = 1;
  }
  
  message DeleteGuestbookResponse {
      string message = 2;
      int64 status = 3;
  }
  